--- a/requirements.txt
+++ b/requirements.txt
@@ -4,10 +4,11 @@ matplotlib
 scikit-learn
 statsmodels
 prophet
-streamlit
 plotly
 fastapi
 uvicorn
 joblib
 pytest
 paho-mqtt  
+streamlit==1.31.1
+altair==4.2.2
